--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
                     <table>
                         <tbody>
                             <tr v-for="u in data">
-                                <td><a :href="'https://eksisozluk.com/biri/'+ u[0]"> {{ u[0] }}</a></td>
+                                <td style="min-width: 250px"><a :href="'https://eksisozluk.com/biri/'+ u[0]"> {{ u[0] }}</a></td>
                                 <td style="padding-left: 10px">{{u[1]}}</td>
                             </tr>
                         </tbody>
