--- a/public/index.html
+++ b/public/index.html
@@ -113,7 +113,7 @@
                             })
                             .catch((...e) => {
                                 console.error('Failed to get response', ...e)
-                                this.error = 'unknown error';
+                                this.error = 'bi beş saniye bekleyip, bi daha deneyelim';
                             })
                             .then(() => {
                                 this.loading = false;
